--- a/Class_Notes/2019/Analysis/sections/2019-10-03.md
+++ b/Class_Notes/2019/Analysis/sections/2019-10-03.md
@@ -169,7 +169,7 @@ Let $\varepsilon > 0$.
 
 Then choose $g$ such that 
 $$
-\int\abs{f(x) ) g(x)} < \varepsilon
+\int\abs{f(x) - g(x)} < \varepsilon
 .$$
 
 By translation invariance, $\int\abs{f(x+h)- g(x+h)} < \varepsilon$ as well.
