/ ‘Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md’

--- a/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
+++ b/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
@@ -6,6 +6,8 @@
 
 We know that every $p\dash$subgroup is contained in some Sylow $p\dash$subgroup, so $P \subseteq S_p^i$ for some $S_p^i \in \mathrm{Syl}_p(G)$.
 
+Since $P$ is normal in $G$, we have $gPg\inv = P$ for all $g\in G$.
 
+But then $gPg\inv \subseteq gS_p^i g\inv = S_p^j$ for some $j$.
 
 ### b
