/ ‘Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md’

--- a/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
+++ b/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
@@ -8,6 +8,6 @@ We know that every $p\dash$subgroup is contained in some Sylow $p\dash$subgroup,
 
 Since $P$ is normal in $G$, we have $gPg\inv = P$ for all $g\in G$.
 
-But then $gPg\inv \subseteq gS_p^i g\inv = S_p^j$ for some $j$.
+But then $gPg\inv \subseteq gS_p^i g\inv = S_p^j$ for some $j$, since all Sylows are conjugate.
 
 ### b
