--- a/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
+++ b/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
@@ -13,3 +13,5 @@ If $S_p^j$ is any other Sylow $p\dash$subgroup, we have $gS_p^i g\inv = S_p^j$ f
 But then $P = gPg\inv \subseteq gS_p^i g\inv = S_p^j$.
 
 ### b
+
+If $\abs M = p^n$ for some $n$, then $M$ is a Sylow $p\dash$subgroup and thus 
