/ ‘Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md’

--- a/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
+++ b/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
@@ -14,4 +14,6 @@ But then $P = gPg\inv \subseteq gS_p^i g\inv = S_p^j$.
 
 ### b
 
-If $\abs M = p^n$ for some $n$, then $M$ is a Sylow $p\dash$subgroup and thus 
+If $\abs M = p^n$ for some $n$, then $M$ is a Sylow $p\dash$subgroup and thus $P \subseteq M$ by (a).
+
+Otherwise, $p$ does not divide $\abs{M}$.
