--- a/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
+++ b/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
@@ -14,6 +14,9 @@ But then $P = gPg\inv \subseteq gS_p^i g\inv = S_p^j$.
 
 ### b
 
-If $\abs M = p^n$ for some $n$, then $M$ is a Sylow $p\dash$subgroup and thus $P \subseteq M$ by (a).
+Write $\abs{G} = p^n m$.
+
+If $p\divides \abs{M}$, then by maximality $\abs M = p^n$ so $M$ is a Sylow $p\dash$subgroup and thus $P \subseteq M$ by (a).
 
 Otherwise, $p$ does not divide $\abs{M}$.
+But $\abs{G} = [G: M] \abs{M} \implies p^n m = \ell k$ where $p$ does not divide $k$.
