--- a/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
+++ b/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
@@ -20,7 +20,7 @@ If $p\divides \abs{M}$, then by maximality $\abs M = p^n$ so $M$ is a Sylow $p\d
 
 Otherwise, $p$ does not divide $\abs{M}$.
 
-But $\abs{G} = [G: M] \abs{M} \implies p^n m = \ell k$ where $p$ does not divide $k$, so $p\divides \ell = [G: M] = \abs{G} / \abs{M} = \abs{G/M}$.
+But $\abs{G} = [G: M] \abs{M} \implies p^n m = \ell k$ where $p$ does not divide $k$, so $p\divides \ell$ where $\ell = [G: M] = \abs{G} / \abs{M} = \abs{G/M}$.
 
 Thus $\abs{G/M} = p^c$ for some $c$.
 
