--- a/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
+++ b/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
@@ -14,14 +14,6 @@ But then $P = gPg\inv \subseteq gS_p^i g\inv = S_p^j$.
 
 ### b
 
-Write $\abs{G} = p^n m$.
+?
 
-If $p\divides \abs{M}$, then by maximality $\abs M = p^n$ so $M$ is a Sylow $p\dash$subgroup and thus $P \subseteq M$ by (a).
-
-Otherwise, $p$ does not divide $\abs{M}$.
-
-But $\abs{G} = [G: M] \abs{M} \implies p^n m = \ell k$ where $p$ does not divide $k$, so $p\divides \ell$ where $\ell = [G: M] = \abs{G} / \abs{M} = \abs{G/M}$.
-
-Thus $\abs{G/M} = p^c$ for some $c$.
-
-$\qed$
+TODO
