/ ‘Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md’

--- a/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
+++ b/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
@@ -19,3 +19,14 @@ But then $P = gPg\inv \subseteq gS_p^i g\inv = S_p^j$.
 TODO
 
 ## 2
+
+Let
+
+- $G_a = \mathrm{Stab}_G(a) = \theset{g\in G \suchthat g\actson a = a}$
+- $G_b = \mathrm{Stab}_G(b) = \theset{g\in G \suchthat g\actson b = b}$
+- $G\cdot x = \mathcal O_x = \theset{g\actson x \suchthat g\in G}$
+
+Suppose $a,b \in X$ where $a \in G\cdot b$, so they belong to the same orbit.
+Then $a = g\actson b$ for some $g\in G$.
+
+Then
