/ ‘Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md’

--- a/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
+++ b/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
@@ -27,6 +27,16 @@ Let
 - $G\cdot x = \mathcal O_x = \theset{g\actson x \suchthat g\in G}$
 
 Suppose $a,b \in X$ where $a \in G\cdot b$, so they belong to the same orbit.
-Then $a = g\actson b$ for some $g\in G$.
+Then $a = h\actson b$ for some $h\in G$.
 
 Then
+\begin{align*}
+g\in G_a 
+\iff g\actson a &= a \\
+\iff g \actson (h\actson b) &= h\actson b \\
+\iff gh \actson b &= h\actson b \\
+\iff h\inv gh \actson b &= b \\
+\iff h\inv g h &\in G_b
+,\end{align*}
+
+so $g\in G_a \iff hgh\inv \in G_b$.
