/ ‘Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md’

--- a/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
+++ b/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
@@ -39,4 +39,4 @@ g\in G_a
 \iff h\inv g h &\in G_b
 ,\end{align*}
 
-so $g\in G_a \iff hgh\inv \in G_b$.
+so $g\in G_a \iff hgh\inv \in G_b$ and so the stabilizers of any two elements in the same orbit are conjugate.
