/ ‘Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md’

--- a/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
+++ b/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
@@ -20,11 +20,9 @@ TODO
 
 ## 2
 
-Let
-
-- $G_a = \mathrm{Stab}_G(a) = \theset{g\in G \suchthat g\actson a = a}$
-- $G_b = \mathrm{Stab}_G(b) = \theset{g\in G \suchthat g\actson b = b}$
-- $G\cdot x = \mathcal O_x = \theset{g\actson x \suchthat g\in G}$
+> - $G_a = \mathrm{Stab}_G(a) = \theset{g\in G \suchthat g\actson a = a}$
+> - $G_b = \mathrm{Stab}_G(b) = \theset{g\in G \suchthat g\actson b = b}$
+> - $G\cdot x = \mathcal O_x = \theset{g\actson x \suchthat g\in G}$
 
 Suppose $a,b \in X$ where $a \in G\cdot b$, so they belong to the same orbit.
 Then $a = h\actson b$ for some $h\in G$.
@@ -40,3 +38,4 @@ g\in G_a
 ,\end{align*}
 
 so $g\in G_a \iff hgh\inv \in G_b$ and so the stabilizers of any two elements in the same orbit are conjugate.
+
