/ ‘Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md’

--- a/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
+++ b/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
@@ -42,3 +42,6 @@ g\in G_a
 so $g\in G_a \iff hgh\inv \in G_b$ and so the stabilizers of any two elements in the same orbit are conjugate.
 
 ### b
+
+Suppose $\abs{H} = k$ and thus $\abs{G} = k\ell$ for some $\ell$ by Lagrange.
+
