--- a/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
+++ b/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
@@ -45,3 +45,8 @@ so $g\in G_a \iff hgh\inv \in G_b$ and so the stabilizers of any two elements in
 
 Suppose $\abs{H} = k$ and thus $\abs{G} = k\ell$ for some $\ell$ by Lagrange.
 
+There are at most $\ell$ distinct conjugates, each containing $e$, yielding
+$$
+\ell(k-1) + 1
+$$
+elements.
