--- a/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
+++ b/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
@@ -45,5 +45,5 @@ so $g\in G_a \iff hgh\inv \in G_b$ and so the stabilizers of any two elements in
 
 Suppose $\abs{H} = k$ and thus $\abs{G} = k\ell$ for some $\ell$ by Lagrange.
 
-Let $G$ act on itself by conjugation, then $\abs 
+Let $G$ act on its subgroups by conjugation, then the orbit $G\cdot H$ is  
 Note that $H \leq N_G(H)$
