/ ‘Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md’

--- a/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
+++ b/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
@@ -45,7 +45,16 @@ so $g\in G_a \iff hgh\inv \in G_b$ and so the stabilizers of any two elements in
 
 Suppose $\abs{H} = k$ and thus $\abs{G} = k\ell$ for some $\ell$ by Lagrange.
 
-Let $G$ act on its subgroups by conjugation, then the orbit $G\cdot H$ is 
+Let $G$ act on its subgroups by conjugation, 
+
+- The orbit $G\cdot H$ is.
+
+- The stabilizer of $H$ is $G_H = N_G(H)$.
+
 By orbit-stabilizer,
+\begin{align*}
+G\cdot H = [G: G_H]
+.\end{align*}
+
+Then
  
-Note that $H \leq N_G(H)$
