/ ‘Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md’

--- a/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
+++ b/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
@@ -47,7 +47,7 @@ Suppose $\abs{H} = k$ and thus $\abs{G} = k\ell$ for some $\ell$ by Lagrange.
 
 Let $G$ act on its subgroups by conjugation, 
 
-- The orbit $G\cdot H$ is.
+- The orbit $G\cdot H$ is the set of all conjugate subgroups, and
 
 - The stabilizer of $H$ is $G_H = N_G(H)$.
 
@@ -55,6 +55,8 @@ By orbit-stabilizer,
 \begin{align*}
 G\cdot H = [G: G_H]
 .\end{align*}
+
+All conjugate subgroups have the same order.
 
 Then
 \begin{align*}
