/ ‘Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md’

--- a/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
+++ b/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
@@ -53,10 +53,10 @@ Let $G$ act on its subgroups by conjugation,
 
 By orbit-stabilizer,
 \begin{align*}
-G\cdot H = [G: G_H]
+G\cdot H = [G: G_H] = [G: N_G(H)]
 .\end{align*}
 
-All conjugate subgroups have the same order.
+Let $\abs H = n$, and note that all conjugate subgroups have the same order.
 
 Then
 \begin{align*}
@@ -66,4 +66,9 @@ H \leq N_G(H)
 
 Now
 
+\begin{align*}
+\union_{g\in G} gHg\inv &
+\leq \sum \abs{G\cdot H} 
+&= \sum [G: H']
+.\end{align*}
 
