/ ‘Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md’

--- a/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
+++ b/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
@@ -68,7 +68,10 @@ Now
 
 \begin{align*}
 \union_{g\in G} gHg\inv &
-\leq \sum \abs{G\cdot H} 
-&= \sum [G: H']
+\leq \sum_{H' \in G\cdot H} \abs{H'} \\
+&= \sum_{H' \in G\cdot H} n \\
+&= n \abs{G\cdot H} \\
+&= n [G: N_G(H)] \\
+&\leq n [G: H]
 .\end{align*}
 
