/ ‘Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md’

--- a/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
+++ b/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
@@ -64,14 +64,17 @@ H \leq N_G(H)
 &\implies [G: N_G(H)] \leq [G: H]
 .\end{align*}
 
-Now
+and each conjugate contains the identity element, so
 
 \begin{align*}
 \union_{g\in G} gHg\inv &
-\leq \sum_{H' \in G\cdot H} \abs{H'} \\
-&= \sum_{H' \in G\cdot H} n \\
-&= n \abs{G\cdot H} \\
-&= n [G: N_G(H)] \\
-&\leq n [G: H]
+\leq 1 + \sum_{H' \in G\cdot H} \left( \abs{H'} - 1 \right) \\
+&= \sum_{H' \in G\cdot H} n - 1 \\
+&= (n-1) \abs{G\cdot H} \\
+&= (n-1) [G: N_G(H)] \\
+&\leq (n-1) [G: H] \\
+&= (n-1) \frac{\abs G}{\abs H} \\
+&= \frac{n-1}{n} \abs{G} \\
+&< \abs G
 .\end{align*}
 
