--- a/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
+++ b/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
@@ -69,11 +69,11 @@ and each conjugate contains the identity element, so
 \begin{align*}
 \union_{g\in G} gHg\inv &
 \leq 1 + \sum_{H' \in G\cdot H} \left( \abs{H'} - 1 \right) \\
-&= \sum_{H' \in G\cdot H} n - 1 \\
-&= (n-1) \abs{G\cdot H} \\
-&= (n-1) [G: N_G(H)] \\
-&\leq (n-1) [G: H] \\
-&= (n-1) \frac{\abs G}{\abs H} \\
+&= 1 + \sum_{H' \in G\cdot H} n - 1 \\
+&= 1 + (n-1) \abs{G\cdot H} \\
+&= 1 + (n-1) [G: N_G(H)] \\
+&\leq 1 + (n-1) [G: H] \\
+&= 1 + (n-1) \frac{\abs G}{\abs H} \\
 &= \frac{n-1}{n} \abs{G} \\
 &< \abs G
 .\end{align*}
