--- a/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
+++ b/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
@@ -43,7 +43,7 @@ so $g\in G_a \iff hgh\inv \in G_b$ and so the stabilizers of any two elements in
 
 ### b
 
-Suppose $\abs{H} = k$ and thus $\abs{G} = k\ell$ for some $\ell$ by Lagrange.
+Suppose $\abs{H} = n$ and thus $\abs{G} = nm$ for some $m \geq 1$ by Lagrange since $H$ is proper.
 
 Let $G$ act on its subgroups by conjugation, 
 
