/ ‘Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md’

--- a/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
+++ b/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
@@ -61,7 +61,7 @@ Let $\abs H = n$, and note that all conjugate subgroups have the same order.
 Then
 \begin{align*}
 H \leq N_G(H) 
-&\implies [G: N_G(H)] \leq [G: H]
+&\implies [G: N_G(H)] \leq [G: H] = m
 .\end{align*}
 
 and each conjugate contains the identity element, so
@@ -73,8 +73,10 @@ and each conjugate contains the identity element, so
 &= 1 + (n-1) \abs{G\cdot H} \\
 &= 1 + (n-1) [G: N_G(H)] \\
 &\leq 1 + (n-1) [G: H] \\
-&= 1 + (n-1) \frac{\abs G}{\abs H} \\
-&= \frac{n-1}{n} \abs{G} \\
-&< \abs G
+&= 1 + (n-1) m\\
+&= 1 + nm - m \\
+&= 1  + \abs{G} - m \\
+&= \abs{G} - (m-1) \\
+&< \abs{G}
 .\end{align*}
 
