--- a/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
+++ b/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
@@ -77,6 +77,7 @@ and each conjugate contains the identity element, so
 &= 1 + nm - m \\
 &= 1  + \abs{G} - m \\
 &= \abs{G} - (m-1) \\
-&< \abs{G}
+&\leq \abs{G} - 1 \quad \text{since } m \geq 2\\
+&< \abs G
 .\end{align*}
 
