--- a/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
+++ b/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
@@ -83,4 +83,7 @@ and each conjugate contains the identity element, so
 
 ### c
 
-By Burnside's lemma,
+Noting that $G\actson S$ transitively iff there is only one orbit and thus $\abs {S/G} = 1$, by Burnside's lemma we have
+\begin{align*}
+1 = \abs{S/G} = \frac{1}{\abs G} \sum_{g\in G} 
+.\end{align*}
