/ ‘Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md’

--- a/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
+++ b/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
@@ -87,3 +87,5 @@ Noting that $G\actson S$ transitively iff there is only one orbit and thus $\abs
 \begin{align*}
 1 = \abs{S/G} = \frac{1}{\abs G} \sum_{g\in G} \abs{S^g} \implies \abs{G} = \sum_{g\in G} \abs{S^g}
 .\end{align*}
+
+Since $\
