/ ‘Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md’

--- a/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
+++ b/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
@@ -86,6 +86,8 @@ and each conjugate contains the identity element, so
 Noting that $G\actson S$ transitively iff there is only one orbit and thus $\abs {S/G} = 1$, by Burnside's lemma we have
 \begin{align*}
 1 = \abs{S/G} = \frac{1}{\abs G} \sum_{g\in G} \abs{S^g} \implies \abs{G} = \sum_{g\in G} \abs{S^g}
-.\end{align*}
+\end{align*}
 
-Since $\
+where $S^g = \theset{s\in S \suchthat g\actson s = s ~\forall g\in G}$.
+
+Since 
