/ ‘Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md’

--- a/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
+++ b/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
@@ -90,4 +90,5 @@ Noting that $G\actson S$ transitively iff there is only one orbit and thus $\abs
 
 where $S^g = \theset{s\in S \suchthat g\actson s = s ~\forall g\in G}$.
 
-Since 
+We can now note that $S^e = S$ and so $\abs{S^e} \geq 2$, not every other term in the sum can be greater than 1.
+So there is some $g$ such that $\abs{S^g} = 0$, which says 
