/ ‘Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md’

--- a/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
+++ b/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
@@ -81,6 +81,8 @@ and each conjugate contains the identity element, so
 &< \abs G
 .\end{align*}
 
+> Todo: not an ideal proof. Doesn't use the first part..?
+
 ### c
 
 Noting that $G\actson S$ transitively iff there is only one orbit and thus $\abs {S/G} = 1$, by Burnside's lemma we have
