/ ‘Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md’

--- a/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
+++ b/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
@@ -98,3 +98,12 @@ So there is some $g$ such that $\abs{S^g} = 0$, so $g$ has no fixed points.
 $\qed$
 
 ## 3
+
+### a
+
+
+### b
+
+False: take $\QQ(\sqrt[3] 2) \to \
+
+### c
