/ ‘Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md’

--- a/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
+++ b/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
@@ -104,6 +104,10 @@ $\qed$
 
 ### b
 
-False: take $\QQ(\sqrt[3] 2) \to \
+False: take $F \to K \to L = \QQ(\zeta_2, \sqrt[3] 2) \to \QQ(\sqrt[3] 2) \to \QQ$.
+
+Then $F/L$ is Galois, since it is the splitting field of $x^3 - 2$ and $\QQ$ has characteristic zero.
+
+But $K/L$ is not Galois, since it is not the splitting field of any irreducible polynomial.
 
 ### c
