/ ‘Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md’

--- a/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
+++ b/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
@@ -101,9 +101,9 @@ $\qed$
 
 ### a
 
-False: take $L \to K \to L = \QQ(\zeta_2, \sqrt[3] 2) \to \QQ(\sqrt[3] 2) \to \QQ$.
+False: take $L/K/F = \QQ(\zeta_2, \sqrt[3] 2) \to \QQ(\sqrt[3] 2) \to \QQ$.
 
-Then $F/L$ is Galois, since it is the splitting field of $x^3 - 2$ and $\QQ$ has characteristic zero.
+Then $L/F$ is Galois, since it is the splitting field of $x^3 - 2$ and $\QQ$ has characteristic zero.
 
 But $K/L$ is not Galois, since it is not the splitting field of any irreducible polynomial.
 
