/ ‘Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md’

--- a/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
+++ b/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
@@ -109,7 +109,9 @@ But $K/F$ is not Galois, since it is not the splitting field of any irreducible 
 
 ### b
 
-True:
+True: if $L/F$ is Galois, then it is normal and separable.
+
+But then $L/K$ is normal
 
 
 ### c
