/ ‘Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md’

--- a/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
+++ b/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
@@ -111,7 +111,7 @@ But $K/F$ is not Galois, since it is not the splitting field of any irreducible 
 
 True: if $L/F$ is Galois, then it is normal and separable.
 
-But then $L/K$ is normal
+But then $L/K$ is normal, since if $\sigma: L \injects \overline k$ lifts the identity on $k$, then $\sigma
 
 
 ### c
