--- a/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
+++ b/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
@@ -113,7 +113,7 @@ But $K/F$ is not Galois, since it is not the splitting field of any irreducible 
 
 True: if $L/F$ is Galois, then it is normal and separable.
 
-But then $L/K$ is normal, since if $\sigma: L \injects \overline K$ lifts the identity on $K$, it also lifts the identity 
+But then $L/K$ is normal, since if $\sigma: L \injects \overline K$ lifts the identity on $K$, it also lifts the identity on $F$ and $\overline K = \overline F$.
 
 
 ### c
