/ ‘Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md’

--- a/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
+++ b/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
@@ -113,7 +113,9 @@ But $K/F$ is not Galois, since it is not the splitting field of any irreducible 
 
 True: if $L/F$ is Galois, then it is normal and separable.
 
-But then $L/K$ is normal, since if $\sigma: L \injects \overline K$ lifts the identity on $K$, it also lifts the identity on $F$ and $\overline K = \overline F$.
+- $L/K$ is normal, since if $\sigma: L \injects \overline K$ lifts the identity on $K$ and fixes $L$, it also lifts the identity on $F$ and fixes $L$ (and $\overline K = \overline F$).
+
+- $L/K$ is separable, since
 
 
 ### c
