/ ‘Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md’

--- a/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
+++ b/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
@@ -111,7 +111,7 @@ But $K/F$ is not Galois, since it is not the splitting field of any irreducible 
 
 ### b
 
-True: if $L/F$ is Galois, then it is normal and separable:
+True: If $L/F$ is Galois, then $L/K$ is normal and separable:
 
 - $L/K$ is normal, since if $\sigma: L \injects \overline K$ lifts the identity on $K$ and fixes $L$, it also lifts the identity on $F$ and fixes $L$ (and $\overline K = \overline F$).
 
