/ ‘Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md’

--- a/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
+++ b/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
@@ -103,7 +103,7 @@ We have $L/K/F$.
 
 ### a
 
-False: take $L/K/F = \QQ(\zeta_2, \sqrt[3] 2) \to \QQ(\sqrt[3] 2) \to \QQ$.
+**False**: take $L/K/F = \QQ(\zeta_2, \sqrt[3] 2) \to \QQ(\sqrt[3] 2) \to \QQ$.
 
 Then $L/F$ is Galois, since it is the splitting field of $x^3 - 2$ and $\QQ$ has characteristic zero.
 
@@ -111,7 +111,7 @@ But $K/F$ is not Galois, since it is not the splitting field of any irreducible 
 
 ### b
 
-True: If $L/F$ is Galois, then $L/K$ is normal and separable:
+**True**: If $L/F$ is Galois, then $L/K$ is normal and separable:
 
 - $L/K$ is normal, since if $\sigma: L \injects \overline K$ lifts the identity on $K$ and fixes $L$, it also lifts the identity on $F$ and fixes $L$ (and $\overline K = \overline F$).
 
