/ ‘Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md’

--- a/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
+++ b/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
@@ -99,11 +99,12 @@ $\qed$
 
 ## 3
 
-We have $L/K/F$.
+Let $L/K/F$.
 
 ### a
 
-**False**: take $L/K/F = \QQ(\zeta_2, \sqrt[3] 2) \to \QQ(\sqrt[3] 2) \to \QQ$.
+**False**: 
+Take $L/K/F = \QQ(\zeta_2, \sqrt[3] 2) \to \QQ(\sqrt[3] 2) \to \QQ$.
 
 Then $L/F$ is Galois, since it is the splitting field of $x^3 - 2$ and $\QQ$ has characteristic zero.
 
@@ -111,7 +112,8 @@ But $K/F$ is not Galois, since it is not the splitting field of any irreducible 
 
 ### b
 
-**True**: If $L/F$ is Galois, then $L/K$ is normal and separable:
+**True**: 
+If $L/F$ is Galois, then $L/K$ is normal and separable:
 
 - $L/K$ is normal, since if $\sigma: L \injects \overline K$ lifts the identity on $K$ and fixes $L$, it also lifts the identity on $F$ and fixes $L$ (and $\overline K = \overline F$).
 
@@ -119,6 +121,7 @@ But $K/F$ is not Galois, since it is not the splitting field of any irreducible 
 
 ### c
 
-False: Use the fact that every quadratic extension is Galois, and take $L/K/F = \QQ(\sqrt[4] 2) \to \QQ(\sqrt 2) \to \QQ$.
+**False**: 
+Use the fact that every quadratic extension is Galois, and take $L/K/F = \QQ(\sqrt[4] 2) \to \QQ(\sqrt 2) \to \QQ$.
 
 Then each successive extension is quadratic (thus Galois) but $\QQ(\sqrt[4] 2)$ is not the splitting field of any polynomial (noting that it does not split $x^4 - 2$ completely.)
