/ ‘Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md’

--- a/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
+++ b/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
@@ -115,7 +115,7 @@ But $K/F$ is not Galois, since it is not the splitting field of any irreducible 
 **True**: 
 If $L/F$ is Galois, then $L/K$ is normal and separable:
 
-- $L/K$ is normal, since if $\sigma: L \injects \overline K$ lifts the identity on $K$ and fixes $L$, it also lifts the identity on $F$ and fixes $L$ (and $\overline K = \overline F$).
+- $L/K$ is normal, since if $\sigma: L \injects \overline K$ lifts the identity on $K$ and fixes $L$, i-t also lifts the identity on $F$ and fixes $L$ (and $\overline K = \overline F$).
 
 - $L/K$ is separable, since $F[x] \subseteq K[x]$, and so if $\alpha \in L$ where $f(x) \definedas \min(\alpha, F)$ has no repeated factors, then $f'(x) \definedas \min(\alpha, K)$ divides $f$ and thus can not have repeated factors.
 
