/ ‘Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md’

--- a/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
+++ b/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
@@ -133,3 +133,6 @@ If the polynomial $f(x) = x$ doesn't divide $m$, then $f$ does not have zero as 
 
 Otherwise, write $\phi(x) = x^m \rho(x)$ where $\gcd(x, \rho(x)) = 1$.
 
+\begin{align*}
+
+.\end{align*}
