--- a/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
+++ b/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
@@ -133,6 +133,8 @@ If the polynomial $f(x) = x$ doesn't divide $m$, then $f$ does not have zero as 
 
 Otherwise, write $\phi(x) = x^m \rho(x)$ where $\gcd(x, \rho(x)) = 1$.
 
+Then
 \begin{align*}
-V
-.\end{align*}
+V \cong \frac{k[x]}{m(x)} \cong \frac{k[x]}{x^m(x)} \oplus \frac{k[x]}{\rho(x)}
+\end{align*}
+by the Chinese Remainder theorem.
