--- a/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
+++ b/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
@@ -145,3 +145,6 @@ We can now note that $\restrictionof{\phi}{U}$ is nilpotent because it has chara
 ## 5
 
 For any vector $\vector w$, we have 
+\begin{align*}
+B\vector w = \sum_{j=0}^{n-1}A^j \vector v
+.\end{align*}
