/ ‘Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md’

--- a/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
+++ b/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
@@ -144,7 +144,7 @@ We can now note that $\restrictionof{\phi}{U}$ is nilpotent because it has chara
 
 ## 5
 
-For any vector $\vector w$, we have 
+For any vector $\vector w$, since $\theset{A^j \vector v}$ spans $V$ we have 
 \begin{align*}
 B\vector w = \sum_{j=0}^{n-1}A^j \vector v
 .\end{align*}
