/ ‘Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md’

--- a/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
+++ b/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
@@ -146,5 +146,7 @@ We can now note that $\restrictionof{\phi}{U}$ is nilpotent because it has chara
 
 For any vector $\vector w$, since $\theset{A^j \vector v}$ spans $V$ we have 
 \begin{align*}
-B\vector w = \sum_{j=0}^{n-1}A^j \vector v
+B\vector w = \sum_{j=0}^{n-1}c_j A^j \vector v
 .\end{align*}
+
+So let $p(x) = \sum\sum_{j=0}^{n-1}c_jx^j$
