/ ‘Class_Notes/2019/Algebra/Review/Quals.pdf’ / ‘Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md’

--- a/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
+++ b/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
@@ -149,4 +149,5 @@ For any vector $\vector w$, since $\theset{A^j \vector v}$ spans $V$ we have
 B\vector w = \sum_{j=0}^{n-1}c_j A^j \vector v
 .\end{align*}
 
-So let $p(x) = \sum\sum_{j=0}^{n-1}c_jx^j$
+So let $p(x) = \sum_{j=0}^{n-1}c_jx^j$.
+Then 
