/ ‘Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md’

--- a/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
+++ b/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
@@ -150,4 +150,6 @@ B\vector w = \sum_{j=0}^{n-1}c_j A^j \vector v
 .\end{align*}
 
 So let $p(x) = \sum_{j=0}^{n-1}c_jx^j$.
-Then consider 
+Then consider how $B$ acts on any basis vector $A^j \vector v$.
+We have $BA^j \vector v
+
