/ ‘Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md’

--- a/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
+++ b/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
@@ -151,5 +151,8 @@ B\vector w = \sum_{j=0}^{n-1}c_j A^j \vector v
 
 So let $p(x) = \sum_{j=0}^{n-1}c_jx^j$.
 Then consider how $B$ acts on any basis vector $A^j \vector v$.
-We have $BA^j \vector v
 
+We have 
+\begin{align*}
+BA^j \vector v = A^j B\vector v
+.\end{align*}
