--- a/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
+++ b/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
@@ -144,15 +144,17 @@ We can now note that $\restrictionof{\phi}{U}$ is nilpotent because it has chara
 
 ## 5
 
-For any vector $\vector w$, since $\theset{A^j \vector v}$ spans $V$ we have 
+Letting $\vector v$ be fixed, since $\theset{A^j \vector v}$ spans $V$ we have 
 \begin{align*}
-B\vector w = \sum_{j=0}^{n-1}c_j A^j \vector v
+B\vector v = \sum_{j=0}^{n-1}c_j A^j \vector v
 .\end{align*}
 
 So let $p(x) = \sum_{j=0}^{n-1}c_jx^j$.
-Then consider how $B$ acts on any basis vector $A^j \vector v$.
+Then consider how $B$ acts on any basis vector $A^k \vector v$.
 
 We have 
 \begin{align*}
-BA^j \vector v = A^j B\vector v
+BA^k \vector v 
+&= A^k B\vector v \\
+&= A^k \left( \sum_{j=0}^{n-1}c_j A^j \vector v \right)
 .\end{align*}
