/ ‘Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md’

--- a/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
+++ b/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
@@ -156,5 +156,8 @@ We have
 \begin{align*}
 BA^k \vector v 
 &= A^k B\vector v \\
-&= A^k \left( \sum_{j=0}^{n-1}c_j A^j \vector v \right)
-.\end{align*}
+&= A^k p(A) \vector v \\
+&= p(A) A^k \vector v
+,\end{align*}
+
+so $B = p(A)$ as operators.
