/ ‘Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md’

--- a/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
+++ b/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
@@ -160,4 +160,4 @@ BA^k \vector v
 &= p(A) A^k \vector v
 ,\end{align*}
 
-so $B = p(A)$ as operators.
+so $B = p(A)$ as operators since their actions agree on every basis vector in $V$.
