--- a/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
+++ b/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
@@ -169,6 +169,9 @@ so $B = p(A)$ as operators since their actions agree on every basis vector in $V
 $\impliedby$:
 
 If $m = \deg m_A(x) < \deg \chi_A(x) = n$, then noting that $m_A(A) = 0$, this says that $m_A(A)\vector v = 0$ and thus there is a linear dependence between the first $m+1 < n$ vectors. 
-So $\theset{A^k\vector v \suchthat 1\leq k \leq n}$ is not linearly independent.
+So $\theset{A^k\vector v \suchthat 0\leq k \leq n-1}$ is not linearly independent.
 
 $\implies$:
+If $\theset{A^j \vector v_k \suchthat 0\leq j \leq n-1}$ is linearly independent, this means that $A$ does satisfy any polynomial of degree $d \leq n-1$.
+
+So $\deg m_A(x) = n$, and since $m_A(x)$ divides $\chi_A(x)$ and both are monic degree polynomials of degree $n$, they must be equal.
