--- a/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
+++ b/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
@@ -168,8 +168,9 @@ so $B = p(A)$ as operators since their actions agree on every basis vector in $V
 
 $\impliedby$:
 
+Let $\vector v$ be arbitrary.
 If $m = \deg m_A(x) < \deg \chi_A(x) = n$, then noting that $m_A(A) = 0$, this says that $m_A(A)\vector v = 0$ and thus there is a linear dependence between the first $m+1 < n$ vectors. 
-So $\theset{A^k\vector v \suchthat 0\leq k \leq n-1}$ is not linearly independent.
+So $\theset{A^k\vector v \suchthat 0\leq k \leq n-1}$ is not linearly independent for any $\vector v$.
 
 $\implies$:
 
