/ ‘Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md’

--- a/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
+++ b/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
@@ -173,3 +173,4 @@ If $\theset{A^j \vector v_k \suchthat 0\leq j \leq n-1}$ is linearly independent
 So $\deg m_A(x) = n$, and since $m_A(x)$ divides $\chi_A(x)$ and both are monic degree polynomials of degree $n$, they must be equal.
 
 $\impliedby$:
+Let $A\actson k[x]$ by $A \actson p(x) \definedas p(A)$.
