/ ‘Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md’

--- a/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
+++ b/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
@@ -174,3 +174,5 @@ So $\deg m_A(x) = n$, and since $m_A(x)$ divides $\chi_A(x)$ and both are monic 
 
 $\impliedby$:
 Let $A\actson k[x]$ by $A \actson p(x) \definedas p(A)$.
+This induces a primary decomposition $V =\cong \bigoplus k[x]/(f_i)$.
+Since the product of the factors
