/ ‘Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md’

--- a/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
+++ b/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
@@ -175,4 +175,7 @@ So $\deg m_A(x) = n$, and since $m_A(x)$ divides $\chi_A(x)$ and both are monic 
 $\impliedby$:
 Let $A\actson k[x]$ by $A \actson p(x) \definedas p(A)$.
 This induces an invariant factor decomposition $V =\cong \bigoplus k[x]/(f_i)$.
-Since the product of the invariant factors is the 
+Since the product of the invariant factors is the characteristic polynomial, the largest invariant factor is the minimal polynomial, and these two are equal, there can only be one invariant factor and thus
+$$
+V\cong \frac{k[x]}{(\chi_A(x))}
+.$$
