--- a/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
+++ b/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
@@ -173,9 +173,12 @@ If $\theset{A^j \vector v_k \suchthat 0\leq j \leq n-1}$ is linearly independent
 So $\deg m_A(x) = n$, and since $m_A(x)$ divides $\chi_A(x)$ and both are monic degree polynomials of degree $n$, they must be equal.
 
 $\impliedby$:
+
 Let $A\actson k[x]$ by $A \actson p(x) \definedas p(A)$.
 This induces an invariant factor decomposition $V =\cong \bigoplus k[x]/(f_i)$.
-Since the product of the invariant factors is the characteristic polynomial, the largest invariant factor is the minimal polynomial, and these two are equal, there can only be one invariant factor and thus
+Since the product of the invariant factors is the characteristic polynomial, the largest invariant factor is the minimal polynomial, and these two are equal, there can only be one invariant factor and thus the invariant factor decomposition is
 $$
 V\cong \frac{k[x]}{(\chi_A(x))}
 .$$
+
+Since there is only one term, this is also the primary decomposition, and thus $A$ is similar to the companion matrix of $\chi_A$.
