/ ‘Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md’

--- a/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
+++ b/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
@@ -181,5 +181,5 @@ $$
 V\cong \frac{k[x]}{(\chi_A(x))}
 .$$
 
-Since there is only one term, this is also the primary decomposition, so $A$ is similar to the companion matrix of $\chi_A$.
+Since there is only one term, this is also the primary decomposition, so $A$ is similar to the companion matrix of $\chi_A$ (which is $RCF(A)$).
 
