--- a/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
+++ b/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
@@ -181,5 +181,7 @@ $$
 V\cong \frac{k[x]}{(\chi_A(x))}
 .$$
 
+So $V$ is a cyclic $k[x]$ module, which means that $V = 1
+
 Since there is only one term, this is also the primary decomposition, so $A$ is similar to the companion matrix of $\chi_A$ (which is $RCF(A)$).
 
