/ ‘Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md’

--- a/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
+++ b/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
@@ -181,7 +181,9 @@ $$
 V\cong \frac{k[x]}{(\chi_A(x))}
 .$$
 
-So $V$ is a cyclic $k[x]$ module, which means that $V = k[x]\cdot v$ for some $v\in V$ such that $\ann(v) = \chi_A(x)$.
+So $V$ is a cyclic $k[x]$ module, which means that $V = k[x]\actson \vector v$ for some $\vector v\in V$ such that $\ann(\vector v) = \chi_A(x)$.
 
-Since there is only one term, this is also the primary decomposition, so $A$ is similar to the companion matrix of $\chi_A$ (which is $RCF(A)$).
+> I.e. there is some element $\vector v\in V$ whose orbit is all of $V$.
+
+But
 
