/ ‘Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md’

--- a/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
+++ b/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
@@ -186,4 +186,8 @@ So $V$ is a cyclic $k[x]$ module, which means that $V = k[x]\actson \vector v$ f
 > I.e. there is some element $\vector v\in V$ whose orbit is all of $V$.
 
 But
+\begin{align*}
+k[x] \actson \vector v 
+\definedas \theset{f(A)\vector v \suchthat f \in k[x]}
+.\end{align*}
 
